[project]
name = "strands-aws-bedrock-agent-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "strands-agents[anthropic]>=1.28.0",
    "python-dotenv>=1.0.0",
    "strands-agents-tools>=0.2.21",
    "bedrock-agentcore>=1.4.1",
    "bedrock-agentcore-starter-toolkit>=0.3.0",
]
